# Toyshop

./: .gitignore  README.md  build.sh  dump_utf8.json  fixtures.json  manage.py  pyproject.toml  requirements.txt  toys_db.sqlite3  toys_fixture.json  toys_fixture_old_with_username.json  toys_full_fixture.json  uv_pyproject.toml
accounts/: urls.py  views.py
accounts/services/: email_service.py
accounts/tests/: test_accounts.py
accounts_old/: urls.py  views.py
accounts_old/services/: email_service.py  token_service.py
accounts_old/tests/: test_accounts.py
base/: context_processors.py  dropbox.py
base/tests/: test_context_processors.py
cart/: models.py  urls.py  views.py
cart/migrations/: 0001_initial.py  0002_initial.py  0003_alter_cartitem_quantity.py  0004_alter_cart_user.py
carts/: admin.py  models.py  urls.py  views.py
carts/migrations/: 0001_initial.py  0002_initial.py  0003_alter_cartitem_total_price.py  0004_convert_cartitem_to_cents.py
carts/tests/: test_carts_views.py
customers/: admin.py  apps.py  forms.py  models.py  urls.py  validators.py  views.py
customers/migrations/: 0001_initial.py  0002_alter_user_toy_club.py  0002_remove_user_customer_user_shop_admin.py  0003_remove_user_toy_club_toyclub_user.py  (+2 more)
order/: forms.py  models.py  urls.py  views.py
orders/: admin.py  forms.py  models.py  urls.py  views.py
pinger/: apps.py
templates/: base.html
toys/: admin.py  forms.py  models.py  urls.py  views.py
toys_shop/: asgi.py  settings.py  urls.py  wsgi.py
wishlist/: models.py
wishlists/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
(+86 files in other folders)
