[tool.poetry]
name = "toys-shop"
version = "0.1.0"
description = "Toys shop"
authors = ["Vinohradov Volodymyr <kram3ko@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
crispy-tailwind = "^1.0.3"
django = "^5.2"
django-allauth = {extras = ["socialaccount"], version = ">=65.7.0"}
django-crispy-forms = "^2.3"
django-debug-toolbar = "^5.1.0"
django-htmx = "^1.23.0"
django-environ = "^0.12.0"
django-resized = "^1.0.3"
django-storages = {extras = ["dropbox"], version = "^1.14.6"}
django-stubs = {extras = ["compatible-mypy"], version = ">=5.1.3"}
dropbox = "^12.0.2"
gunicorn = "^23.0.0"
pillow = "^11.1.0"
psycopg2-binary = "^2.9.10"
whitenoise = "^6.9.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
